@@ -801,12 +801,6 @@ Usage: vendor
 Usage: view [TEXT]
 * View TEXT in HTML Viewer.
 </view>
-<vnt>
-Usage: vnt [SOURCE] [FILE]
-* Parse SOURCE content text to VNT format.
-
-	When destination FILE is missing, the parsed content is saved at nano buffer.
-</vnt>
 <warn>
 Usage: warn [TEXT]
 * Display an Alert with TEXT.
