@@ -3,5 +3,4 @@ NAME="OpenTTY"
 VERSION_ID="$VERSION"
 VERSION="$VERSION ($PATCH)"
 VERSION_CODENAME="$PATCH"
-ID=j2me
 HOME_URL="http://opentty.xyz/"
